--- a/index.html
+++ b/index.html
@@ -1,75 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
+	<!-- Compiled and minified CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous" defer></script>
+	<!-- Compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
+	<script src="js/customhttp.js" defer></script>
+	<script src="js/newsService.js" defer></script>
+	<script src="js/newsUI.js" defer></script>
+	<script src="js/alertUI.js" defer></script>
+	<script src="js/app.js" defer></script>
+	<script src="js/init.js" defer></script>
 </head>
 <body>
-    <main>
-        <div class="form-wrap container">
-            <div class="card">
-                <form name="newsControlForm">
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <div class="input-field col s12">
-                                <select name="country" id="country">
-                                    <option value="" disabled selected>Choose your country</option>
-                                    <option value="ua">Ukraine</option>
-                                    <option value="us">United States</option>
-                                    <option value="ve">Venuzuela</option>
-                                </select>
-                                <label>Country</label>
-                            </div>
-                        </div>
-                        <div class="col s12 m6">
-                            <div class="input-field col s12">
-                                <select name="category" id="category">
-                                    <option value="" disabled selected>Choose your category</option>
-                                    <option value="science">Science</option>
-                                    <option value="sports">Sports</option>
-                                    <option value="technology">Technology</option>
-                                </select>
-                                  
-                                <label>Category</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input placeholder="Search news" id="search" type="text">
-                            <label for="search">Search</label>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="news-wrap container">
-            <div class="row"></div>
-        </div>
-    </main>
-
-    <!-- jQuery -->
-    <script
-        src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-    <script>
-        $(document).ready(function(){
-            $('select').formSelect();
-        });
-    </script>
-
-    <script src="js/customhttp.js"></script>
-    <script src="js/newsService.js"></script>
-    <script src="js/newsUI.js"></script>
-    <script src="js/app.js"></script>
+<main>
+	<div class="form-wrap container">
+		<div class="card">
+			<form name="newsControlForm">
+				<div class="row">
+					<div class="col s12 m6">
+						<div class="input-field col s12">
+							<select name="country" id="country">
+								<option value="" disabled selected>Choose your country</option>
+								<option value="ua">Ukraine</option>
+								<option value="us">United States</option>
+								<option value="ve">Venuzuela</option>
+							</select>
+							<label>Country</label>
+						</div>
+					</div>
+					<div class="col s12 m6">
+						<div class="input-field col s12">
+							<select name="category" id="category">
+								<option value="" disabled selected>Choose your category</option>
+								<option value="science">Science</option>
+								<option value="sports">Sports</option>
+								<option value="technology">Technology</option>
+							</select>
+							<label>Category</label>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="input-field col s12">
+						<input placeholder="Search news" id="search" type="text">
+						<label for="search">Search</label>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<div class="news-wrap container">
+		<div class="row"></div>
+	</div>
+</main>
 </body>
 </html>
